Fix - hidden message content, checkbox alignment

--- a/src/main-block/messages-block/header/header.css
+++ b/src/main-block/messages-block/header/header.css
@@ -27,7 +27,6 @@
   cursor: pointer;
   width: 16px;
   height: 16px;
-  margin-top: 0;
   margin-bottom: 0;
   display: inline-block;
 
