--- a/src/main-block/messages-block/hidden-message/hidden-message.css
+++ b/src/main-block/messages-block/hidden-message/hidden-message.css
@@ -8,7 +8,15 @@
   border-bottom: solid 1px #e2e2e2;
 }
 
-.hidden-message__text {
+.hidden-message__open {
+  display: block;
+}
+
+.hidden-message__closed {
+  display: none;
+}
+
+.hidden-message__content {
   overflow: auto;
   padding: 20px;
   font-family: "Helvetica Neue", sans-serif;
@@ -23,22 +31,4 @@
   font-weight: 100;
   color: #ccc;
   cursor: pointer;
-}
-
-.hidden-message__image {
-  border-radius: 50%;
-  shape-outside: circle();
-  margin-left: 1.5rem;
-  width: 190px;
-  height: 180px;
-}
-
-.hidden-message__label:hover {
-  cursor: pointer;
-}
-
-.text-container {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
