--- a/src/main-block/messages-block/messages-block.css
+++ b/src/main-block/messages-block/messages-block.css
@@ -16,7 +16,6 @@
   cursor: pointer;
   width: 16px;
   height: 16px;
-  margin-top: 0;
   margin-bottom: 0;
   display: inline-block;
 
@@ -43,6 +42,14 @@
   height: 100%;
   min-height: 500px;
   border-bottom: solid 1px #e2e2e2;
+}
+
+.messages-list__open {
+   display: block;
+}
+
+.messages-list__closed {
+  display: none;
 }
 
 .message {
